--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,62 @@
-/**
- * TODO(you): Add the CSS necessary to complete your final project.
- **/
+body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-family: sans-serif;
+    background-color: rgb(231, 233, 100);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box{
+    width: 300px;
+    padding: 40px;
+    background-color:  rgb(61, 61, 60);
+    text-align: center;
+    border-radius: 20px;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+   
+}
+.box h1{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.box input[type="text"], .box input[type="password"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto; 
+    text-align: center;
+    border: 2px solid #3498db;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+}
+.box input[type="button"]{
+    cursor: pointer; 
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto; 
+    text-align: center;
+    border: 2px solid #199fa3;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+}
+#sign_up,#login{
+    color: rgb(204, 156, 164);
+    padding-left: 240px;
+}
+#sign_up:hover,#login:hover{
+    cursor: pointer; 
+    color: white;
+}
+.hidden{
+    display: none;
+}
